--- a/sobre.css
+++ b/sobre.css
@@ -2,7 +2,6 @@ body {
   color: #333333;
   font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
 
-
 }
 
 main{
@@ -23,8 +22,18 @@ main{
     padding: 0 45px;
     text-indent: 15px;
   }
+  p::first-letter {
+  font-weight: bold;
+  }
+  h1 + p {
+  text-indent: 0;
+  }
+  :not(p) + p::first-line {
+  font-variant: small-caps;
+  }
 
-  figure {
+  #centro-distribuição,
+  #familia-pelho {
     background-color: #f2EDED;
     border: 1px solid #ccc;
     text-align: center;
