--- a/css/index.css
+++ b/css/index.css
@@ -2,6 +2,7 @@ main{
   width: 940px;
   margin-left: auto;
   margin-right: auto;
+  background-color: #FFF0F5;
 }
 
 .main_pesquisa_menu_foto{
@@ -66,12 +67,13 @@ main{
 .paineis{
   display: grid;
   grid-template-columns: repeat(2, 2fr);
+  justify-content: space-evenly;
 
 }
 .painel {
   margin: 10px 0;
   padding: 10px;
-  width: 445px;
+  width: 430px;
   border-radius: 20px;
   box-shadow: inset 1px 1px 4px #999;
 }
@@ -79,26 +81,37 @@ main{
 
 .novidades {
   background: linear-gradient(#F5DCDC, #BEBEF4);
+  margin-right: 3%;
 }
 .mais-vendidos {
   background: linear-gradient(#DCDCF5, #F4BEBE);
+  margin-left: 3%;
 }
 .painel li {
   display: inline-block;
   vertical-align: top;
-  width: 140px;
-  margin: 2px;
+  width: 25%;
+  margin: 2%;
   padding-bottom: 10px;
   transition: 0.7s ease-out;
+  border-radius: 10px;
 }
+
+.painel li img {
+  width: 100%;
+  border-radius: 10px 10px 0 0;
+}
+
 .painel li:hover {
   background-color: rgba(255,255,255,0.8);
   box-shadow: 0 0 5px #333;
   transition: 0.7s ease-in;
   transform: scale(1.2) rotate(-5deg);
+  border-radius: 10px;
 }
 .painel li:nth-child(2n):hover {
   transform: scale(1.2) rotate(5deg);
+  border-radius: 10px;
 }
 
 .painel h2 {
@@ -115,15 +128,12 @@ main{
   text-decoration: none;
 }
 .painel a:hover{
-
+  border-radius: 10px;
 }
 .painel h2:before {
   content: '\2756';
   padding-right: 5px;
   opacity: 0.4;
-}
-.painel img{
-  border-radius: 10px;
 }
 
 .menu-departamentos li ul {
@@ -140,4 +150,97 @@ main{
 .menu-departamentos li li a:before {
 content: '\272A';
 padding-right: 3px;
+}
+
+
+/* ---------------------------------------------------------------------------
+------------------------MEDIAS FOR AJUST--------------------------------------
+-----------------------------------------------------------------------------*/
+@media (max-width: 320px){
+
+  .main_pesquisa_menu_foto{
+    width: 90%;
+    display: inline-block;
+    margin-left: 10px;
+    margin-right: auto;
+    text-align: center;
+  }
+  .departamentos_itens,
+  .botao_pesquisa{
+    width: auto;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+  }
+
+
+  .novidades li{
+    width: 80%;
+  }
+  .mais-vendidos li{
+    width: 80%;
+  }
+}
+@media (max-width: 640px){
+  .main_pesquisa_menu_foto{
+    display: inline-block;
+    flex-wrap: wrap;
+    width: 90%;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+  }
+
+
+
+}
+@media (max-width: 720px){
+
+}
+@media (max-width: 940px){
+  main{
+      width: 80%;
+      margin-left: 10%;
+      margin-right: 10%;
+  }
+  .banner_destaques img{
+      width: 100%;
+    }
+  .banner_destaques{
+
+    text-align: center;
+    width: 100%;
+  }
+  .main_pesquisa_menu_foto{
+    display:  flex;
+    justify-content: space-evenly;
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+  }
+  .paineis {
+    width: 90%;
+    flex-wrap: wrap;
+    display: inline-block;
+
+
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .painel{
+    width: 90%;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+  }
+
+  .novidades,
+  .mais-vendidos {
+    margin-right: 5%;
+    margin-left: 5%;
+
+  }
+
+
 }
