--- a/css/produtos.css
+++ b/css/produtos.css
@@ -1,110 +1,178 @@
-.produto{
-  width: 90%;
-  margin-left: 5%;
-  margin-right: 5%;
-  text-align: center;
-}
+.produto {
+    color: #333;
+    line-height: 1.3;
+    margin-top: 2em;
+  }
+  .produto h1 {
+      font-size: 1.8em;
+      font-weight: bold;
+    }
+  .produto p {
+      font-size: 1.2em;
+      font-style: italic;
+      margin-bottom: 1em;
+    }
+  .produto legend {
+      display: block;
+      font: bold 0.9em/2.5 Arial;
+      text-transform: uppercase;
+    }
 
-    .cores label::after {
-        content: '';
-        display: block;
-
-        position: absolute;
-        top: 5%;
-
-        border-radius: 50%;
-        box-sizing: border-box;
-        width: 40px;
-        height: 40px;
-
-        margin-bottom: 1em;
-      }
-        label[for=verde]::after {
-            left: 10%;
-            background-color: #33CC66;
-          }
-        label[for=rosa]::after {
-            left: 35%;
-            background-color: #FF6666;
-          }
-        label[for=azul]::after {
-            left: 60%;
-            background-color: #6666FF;
-          }
-
-  .cores {
+.cores {
     position: relative;
     padding-top: 90px;
-
   }
-    .cores input[type=radio] {
+
+  .cores legend {
+      position: absolute;
+      top: 0;
+      left: 0;
+    }
+  .cores label img {
+      display: block;
+      max-width: 100%;
+      border: 2px solid #CCC;
+    }
+  .cores label::after {
+    position: absolute;
+    top: 30px;
+
+    content: '';
+    display: block;
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+
+    box-sizing: border-box;
+
+    border: 6px solid rgba(0,0,0,0);
+    transition: 1s;
+    cursor: pointer;
+  }
+  .cores label:hover::after {
+    border: 6px solid rgba(0,0,0,0.1);
+  }
+
+  label[for=verde]::after {
+    background-color: #33CC66;
+    left: 0;
+  }
+  label[for=rosa]::after {
+    background-color: #FF6666;
+    left: 60px;
+  }
+  label[for=azul]::after {
+    background-color: #6666FF;
+    left: 120px;
+  }
+  .cores input:checked + label::after {
+      border: 6px solid rgba(0,0,0,0.3);
+    }
+  .cores input[type=radio] {
       display: none;
+    }
+  .cores input:not(:checked) + label img {
+      display: none;
+    }
+    .comprar {
+        background: #91BD3C;
+        border: none;
+        color: #333;
+        font-size: 1.4em;
+        text-transform: uppercase;
+        box-shadow: 0 1px 3px #777;
+        display: block;
+        padding: 0.5em 1em;
+        margin: 1em 0;
       }
+  fieldset {
+      display: inline-block;
+      vertical-align: top;
+      margin: 1em 0;
+      min-width: 240px;
+      width: 45%;
+    }
 
-        .cores input:checked + label::after {
-            border: 6px solid rgba(0,0,0,0.3);
-          }
+  .detalhes {
+      padding: 2em 0;
+    }
+  .detalhes h2 {
+      font-size: 1.5em;
+      line-height: 2;
+    }
+  .detalhes p {
+      margin: 1em 0;
+      font-size: 1em;
+      line-height: 1.5;
+      max-width: 36em;
+    }
+  table {
+      border-spacing: 0.2em;
+      border-collapse: separate;
+    }
+  thead {
+      background-color: #999;
+    }
+  thead th {
+      font-weight: bold;
+      padding: 0.3em 1em;
+      text-align: center;
+    }
+  td {
+      padding: 0.3em;
+    }
+  tr:nth-child(2n) {
+      background-color: #CCC;
+    }
+  td:first-child {
+      font-style: italic;
+    }
 
-        .cores input:not(:checked) + label img {
-          display: none;
-          }
+ .produto-back {
+      background-color: #F2F2F2;
+      margin-top: 1em;
+      border-top: 2px solid #CCC;
+    }
 
-            .cores label img{
-              width: 90%;
-              margin-left: 5%;
-              margin-right: 5%;
-              padding-top: 1em;
-              }
-.comprar {
-  margin: 5%;
+/*----------------------------------------------------------------------------
+-----------------------medias para mobile-frist-------------------------------
+----------------------------------------------------------------------------*/
+@media (min-width: 500px) {
+    .detalhes {
+        font-size: 1.2em;
+      }
+  }
 
-  width: 8rem;
-  height: 3.5rem;
-
-
-  background-color: black;
-  color: gray;
-  font-size: 1.5rem;
-  text-transform: uppercase;
-
-  border-radius: 20px;
-}
-
-
-
-  @media (min-width: 600px) {
-    img {
+@media (min-width: 600px) {
+  img {
       float: left;
     }
   }
-  @media (min-width: 600px) {
-    .cores label img{
-      width: 60%;
-      margin-left: 20%;
-      margin-right: 20%;
+
+@media (min-width: 630px) {
+  .produto {
+      position: relative;
+      padding-left: 40%;
+      font-size: 1.2em;
     }
-    .cores label::after {
-
-        width: 10%;
-        height: 10%;
-
-        margin-bottom: 1em;
+    .cores {
+        position: static;
+        padding: 0;
       }
+      .cores legend {
+        position: static;
+      }
+      .cores label img {
+        position: absolute;
+        top: 0;
+        left: 0;
 
+        max-width: 35%;
+        max-height: 100%;
+      }
+      .cores label:after {
+        position: static;
+        float: left;
+        margin-right: 10px;
+    }
   }
-    @media (min-width: 340px){
-      .produto{
-        width: 60%;
-        margin-left: 20%;
-        margin-right: 20%;
-      }
-      label[for=verde]::after {
-          left: 20%;
-        }
-      label[for=rosa]::after {
-          left: 45%;
-        }
-      label[for=azul]::after {
-          left: 70%;
-        }
-    }
